--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <h2>Contact Me</h2>
                 <div class="contact-info">
                     <p><img src="email-icon.png" alt="Email" class="contact-icon"> ntungufhadzeni@codecrafters.co.za</p>
-                    <p><img src="phone-icon.png" alt="Phone" class="contact-icon"> +27797983145</p>
+                    <p><img src="phone-icon.png" alt="Phone" class="contact-icon"> +27797983145/+276112027</p>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/ntungufhadzeni-mbudzeni-31944352/" target="_blank">
                             <img src="linkedin-icon.png" alt="LinkedIn" class="social-icon">
