remove picture icons and use awesome fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ntungufhadzeni Mbudzeni - Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
     <body>
         <header>
@@ -24,7 +25,7 @@
                 <div class="profile">
                     <img src="profile-picture.jpg" alt="Profile Picture" class="profile-img">
                     <div class="profile-info">
-                        <p>Welcome to my portfolio website. I'm a Python Developer with a passion for crafting efficient solutions
+                        <p>Hi, I'm <span>Ntungufhadzeni Mbudzeni</span>. I'm a Python Developer with a passion for crafting efficient solutions
                             using Python frameworks such as Django and Flask. I specialize in developing robust backend systems and
                             leveraging my coding expertise to solve complex challenges.</p>
                         <p>I excel in collaborating with teams to create innovative applications and enjoy staying updated with the
@@ -33,71 +34,73 @@
                 </div>
             </section>
             <section id="skills">
-                <h2>Skills</h2>
-                <div class="skill">
-                    <h3>Python</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 100%;">100%</div>
+                <div class="skills">
+                    <h2>Skills</h2>
+                    <div class="skill">
+                        <h3>Python</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 100%;">100%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>Django</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 95%;">95%</div>
+                    <div class="skill">
+                        <h3>Django</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 95%;">95%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>Flask</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 95%;">95%</div>
+                    <div class="skill">
+                        <h3>Flask</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 95%;">95%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>FastAPI</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;">90%</div>
+                    <div class="skill">
+                        <h3>FastAPI</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 90%;">90%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>JavaScript</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;">90%</div>
+                    <div class="skill">
+                        <h3>JavaScript</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 90%;">90%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>HTML</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;">90%</div>
+                    <div class="skill">
+                        <h3>HTML</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 90%;">90%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>CSS</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 80%;">80%</div>
+                    <div class="skill">
+                        <h3>CSS</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 80%;">80%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>SQL</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;">90%</div>
+                    <div class="skill">
+                        <h3>SQL</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 90%;">90%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>Linux</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;">90%</div>
+                    <div class="skill">
+                        <h3>Linux</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 90%;">90%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>Docker</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;">90%</div>
+                    <div class="skill">
+                        <h3>Docker</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 90%;">90%</div>
+                        </div>
                     </div>
-                </div>
-                <div class="skill">
-                    <h3>React JS</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 50%;">50%</div>
+                    <div class="skill">
+                        <h3>React JS</h3>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 50%;">50%</div>
+                        </div>
                     </div>
                 </div>
                 <!-- Add more skills and progress bars as needed -->
@@ -123,12 +126,14 @@
                             <span class="tag">Postgres</span>
                             <span class="tag">HTMX</span>
                         </div>
-                        <a href="https://github.com/ntungufhadzeni/invoice-project.git">
-                            <img src="github-icon.png" alt="GitHub" class="social-icon">
-                        </a>
-                        <a href="https://billify.codecrafters.co.za">
-                            <img src="web-icon.png" alt="Link" class="social-icon">
-                        </a>
+                        <div class="project-links">
+                            <a href="https://github.com/ntungufhadzeni/invoice-project.git" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://billify.codecrafters.co.za" target="_blank">
+                                <i class="fa fa-link"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="project">
@@ -151,12 +156,14 @@
                             <span class="tag">Nginx</span>
                             <span class="tag">Postgres</span>
                         </div>
-                        <a href="https://github.com/ntungufhadzeni/soccer_bets.git">
-                            <img src="github-icon.png" alt="GitHub" class="social-icon">
-                        </a>
-                        <a href="https://winningfootytips.co.za/">
-                            <img src="web-icon.png" alt="Link" class="social-icon">
-                        </a>
+                        <div class="project-links">
+                            <a href="https://github.com/ntungufhadzeni/soccer_bets.git" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://winningfootytips.co.za/" target="_blank">
+                                <i class="fa fa-link"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="project">
@@ -174,26 +181,37 @@
                             <span class="tag">Nginx</span>
                             <span class="tag">Postgres</span>
                         </div>
-                        <a href="https://github.com/ntungufhadzeni/leeto-dash.git">
-                            <img src="github-icon.png" alt="GitHub" class="social-icon">
-                        </a>
-                        <a href="https://leetodash.co.za">
-                            <img src="web-icon.png" alt="Link" class="social-icon">
-                        </a>
+                        <div class="project-links">
+                            <a href="https://github.com/ntungufhadzeni/leeto-dash.git" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://leetodash.co.za" target="_blank">
+                                <i class="fa fa-link"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
             <section id="contact">
                 <h2>Contact Me</h2>
                 <div class="contact-info">
-                    <p><img src="email-icon.png" alt="Email" class="contact-icon"> ntungufhadzeni@codecrafters.co.za</p>
-                    <p><img src="phone-icon.png" alt="Phone" class="contact-icon"> +27797983145/+276112027</p>
+                    <div class="info-box">
+                        <i class="fas fa-phone-alt"></i>
+                        <p>+27 79 798 3145/+27 61 120 2714</p>
+                    </div>
+                    <div class="info-box">
+                        <i class="fas fa-envelope-open"></i>
+                        <p>ntungufhadzeni@codecrafters.co.za</p>
+                    </div>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/ntungufhadzeni-mbudzeni-31944352/" target="_blank">
-                            <img src="linkedin-icon.png" alt="LinkedIn" class="social-icon">
+                            <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="https://github.com/ntungufhadzeni" target="_blank">
-                            <img src="github-icon.png" alt="GitHub" class="social-icon">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://twitter.com/mbudzeni_n" target="_blank">
+                            <i class="fab fa-twitter"></i>
                         </a>
                     </div>
                 </div>
