add profile section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Ntungufhadzeni Mbudzeni</h1>
             <nav>
                 <ul>
+                    <li><a href="#profile">Profile</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -20,17 +21,30 @@
             </nav>
         </header>
         <main>
+            <section id="profile">
+                <div class="profile">
+                    <div class="profile-img">
+                        <img src="profile-picture.jpg" alt="Profile Picture">
+                    </div>
+                    <div class="profile-info">
+                        <h2>Hi, I'm <span>Ntungufhadzeni Mbudzeni.</span></h2>
+                        <h3>Python Developer</h2>
+                        <p>Welcome to my portfolio website.</p>
+                        <div class="profile-btn">
+                            <a href="#contact" class="btn">Contact Me</a>
+                        </div>
+                    </div>
+                    
+                </div>
+            </section>
             <section id="about">
                 <h2>About Me</h2>
-                <div class="profile">
-                    <img src="profile-picture.jpg" alt="Profile Picture" class="profile-img">
-                    <div class="profile-info">
-                        <p>Hi, I'm <span>Ntungufhadzeni Mbudzeni</span>. I'm a Python Developer with a passion for crafting efficient solutions
-                            using Python frameworks such as Django and Flask. I specialize in developing robust backend systems and
-                            leveraging my coding expertise to solve complex challenges.</p>
-                        <p>I excel in collaborating with teams to create innovative applications and enjoy staying updated with the
-                            latest trends in the Python ecosystem to enhance my skills continuously.</p>
-                    </div>
+                <div class="about">
+                    <p>I'm a Python Developer with a passion for crafting efficient solutions
+                        using Python frameworks such as Django and Flask. I specialize in developing robust backend systems and
+                        leveraging my coding expertise to solve complex challenges.</p>
+                    <p>I excel in collaborating with teams to create innovative applications and enjoy staying updated with the
+                        latest trends in the Python ecosystem to enhance my skills continuously.</p>
                 </div>
             </section>
             <section id="skills">
