--- a/index.html
+++ b/index.html
@@ -113,11 +113,10 @@
                     <div class="skill">
                         <h3>React JS</h3>
                         <div class="progress-bar">
-                            <div class="progress" style="width: 50%;">50%</div>
+                            <div class="progress" style="width: 80%;">80%</div>
                         </div>
                     </div>
                 </div>
-                <!-- Add more skills and progress bars as needed -->
             </section>
             <section id="portfolio">
                 <h2>Portfolio</h2>
@@ -143,9 +142,6 @@
                         <div class="project-links">
                             <a href="https://github.com/ntungufhadzeni/invoice-project.git" target="_blank">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="https://billify.codecrafters.co.za" target="_blank">
-                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
@@ -174,33 +170,30 @@
                             <a href="https://github.com/ntungufhadzeni/soccer_bets.git" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="https://winningfootytips.co.za/" target="_blank">
-                                <i class="fa fa-link"></i>
-                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
                     <img src="project3.png" alt="project3">
                     <div class="project-info">
-                        <h3>Leeto Dashboard</h3>
+                        <h3>Thuso Project</h3>
                         <p>
-                            Leeto Dashboard is a dashboard to show passenger statistics for Leeto La Polokwane buses.
+                            The Django project with a WhatsApp interface harnesses the power of Chat GPT, a cuttingedge natural language processing
+                            model, to revolutionize the document generation process. With this innovative integration, users can effortlessly create
+                            CVs and cover letters by simply conversing with the application through WhatsApp.
                         </p>
                         <div class="tags">
                             <span class="tag">Python</span>
-                            <span class="tag">Dash</span>
+                            <span class="tag">Django</span>
                             <span class="tag">Docker</span>
                             <span class="tag">Redis</span>
                             <span class="tag">Nginx</span>
-                            <span class="tag">Postgres</span>
+                            <span class="tag">Celery</span>
+                            <span class="tag">Celery Beat</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/ntungufhadzeni/leeto-dash.git" target="_blank">
+                            <a href="https://github.com/ntungufhadzeni/thuso-project.git" target="_blank">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="https://leetodash.co.za" target="_blank">
-                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
@@ -211,12 +204,16 @@
                 <div class="contact-info">
                     <div class="info-box">
                         <i class="fas fa-phone-alt"></i>
-                        <p>+27 79 798 3145/+27 61 120 2714</p>
+                        <p>+27 69 441 2786</p>
                     </div>
                     <div class="info-box">
                         <i class="fas fa-envelope-open"></i>
-                        <p>ntungufhadzeni@codecrafters.co.za</p>
-                    </div>
+                        <p>
+                            <a href="mailto:ntungufhadzeni@codecrafters.co.za">
+                                ntungufhadzeni@codecrafters.co.za
+                            </a>
+                        </p>
+                    </div>                    
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/ntungufhadzeni-mbudzeni-31944352/" target="_blank">
                             <i class="fab fa-linkedin"></i>
@@ -224,9 +221,9 @@
                         <a href="https://github.com/ntungufhadzeni" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://twitter.com/mbudzeni_n" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                        </a>
+                        <a href="https://x.com/mbudzeni_n" target="_blank">
+                            <i class="fab fa-x-twitter"></i>
+                        </a>                        
                     </div>
                 </div>
             </section>
