--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="https://x.com/mbudzeni_n" target="_blank">
-                            <i class="fab fa-x-twitter"></i>
+                            <i class="fa-brands fa-x-twitter"></i>
                         </a>                        
                     </div>
                 </div>
